<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/bares"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.danielgarcia.practica4.Bares">

    <TextView
        android:text="@string/actividadBarmensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textStyle="normal|bold|italic"
        android:textColor="@color/goldenrod"
        android:textSize="25sp"
        android:typeface="monospace"
        android:id="@+id/textView" />

    <Button
        android:onClick="barbershop"
        android:id="@+id/Bar1"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:background="@drawable/madera"
        android:text="@string/Bar1"
        android:textColor="@color/darkorange"
        android:textSize="30sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="jaras"
        android:id="@+id/Bar2"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:background="@drawable/madera"
        android:text="@string/Bar2"
        android:textColor="@color/darkorange"
        android:textSize="30sp"
        android:layout_below="@+id/Bar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <Button
        android:onClick="babaros"
        android:id="@+id/Bar3"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:background="@drawable/madera"
        android:text="@string/Bar3"
        android:textColor="@color/darkorange"
        android:textSize="30sp"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/Bar2"
        android:layout_alignLeft="@+id/Bar2"
        android:layout_alignStart="@+id/Bar2" />

    <Button
        android:id="@+id/regresarB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/regresar"
        android:onClick="volverB"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
