<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/hoteles"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.danielgarcia.practica4.Hoteles">

    <TextView
        android:text="@string/actividadHotelmensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textStyle="normal|bold|italic"
        android:textColor="@color/goldenrod"
        android:textSize="25sp"
        android:typeface="monospace"
        android:id="@+id/textView"/>

    <Button
        android:onClick="lolita"
        android:id="@+id/Hotel1"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:background="@drawable/madera"
        android:text="@string/Hotel1"
        android:textColor="@color/darkorange"
        android:textSize="30sp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="cisneros"
        android:id="@+id/Hotel2"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:background="@drawable/madera"
        android:text="@string/Hotel2"
        android:textColor="@color/darkorange"
        android:textSize="30sp"
        android:layout_below="@+id/Hotel1"
        android:layout_alignLeft="@+id/Hotel1"
        android:layout_alignStart="@+id/Hotel1"
        android:layout_marginTop="46dp" />

    <Button
        android:onClick="hosteria"
        android:id="@+id/Hotel3"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:background="@drawable/madera"
        android:text="@string/Hotel3"
        android:textColor="@color/darkorange"
        android:textSize="30sp"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/Hotel2"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/regresarH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/regresar"
        android:onClick="volverH"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
